# bridging-eval

./: README.md
sourcecode/: main.py  pyproject.toml
sourcecode/scoring/: note_ratings.py  process_data.py  scorer.py
