[tool.poetry]
name = "sourcecode"
version = "0.1.0"
description = ""
authors = ["Sebastian Zhao <sebbyzhao@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.23.4"
torch = "2.0.1"
matplotlib-inline = "0.1.6"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
ipykernel = "^6.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
